namespaces/live.cloud-platform.service.justice.gov.uk/bold-case-information-dashboard-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bold-case-information-dashboard-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "ask-bold-rr-ops"
    cloud-platform.justice.gov.uk/application: "Case information dashboard"
    cloud-platform.justice.gov.uk/owner: "BOLD Reducing Reoffending: william.martin@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/bold-rr-ops-pilot-tool"
    cloud-platform.justice.gov.uk/team-name: "bold-rr-ops-team"
    cloud-platform.justice.gov.uk/review-after: ""
